# raftifun

./: AGENTS.md  Cargo.toml
proto/: raft.proto
src/: coordinator.rs  events.rs  lib.rs  main.rs  membership.rs  raft.rs  transport.rs
